force-app/main/default/objects/Programme_Participant__c/Programme_Participant__c.object-meta.xml
<CustomObject>
    <label>Programme Participant</label>
    <nameField>
        <displayFormat>P-{00000}</displayFormat>
        <label>Programme Participant Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Programme Participants</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>