force-app/main/default/objects/Programme_Participant__c/fields/Accreditation_Withdrawal_Date__c.field-meta.xml
<CustomField>
    <fullName>Accreditation_Withdrawal_Date__c</fullName>
    <inlineHelpText>Date of withdrawal from the accreditation (NPQ)</inlineHelpText>
    <label>Accreditation Withdrawal Date</label>
    <type>Date</type>
</CustomField>