force-app/main/default/objects/Programme_Participant__c/fields/Attendance_Score__c.field-meta.xml
<CustomField>
    <fullName>Attendance_Score__c</fullName>
    <description>The participant&#39;s attendance score (percentage), calculated using the same Apex code performing attendance calculations in the My Ambition community.

Full details of the calculation can be found here: https://oegenlimited.atlassian.net/browse/AS-157</description>
    <inlineHelpText>The participant&#39;s attendance score (percentage), calculated using the same Apex code performing attendance calculations in the My Ambition community.</inlineHelpText>
    <label>Attendance Score</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>