force-app/main/default/objects/Programme_Participant__c/fields/Cohort__c.field-meta.xml
<CustomField>
    <fullName>Cohort__c</fullName>
    <description>Used in the Learning Lounge Lightning Community</description>
    <label>Cohort</label>
    <referenceTo>TL_Programme__c</referenceTo>
    <relationshipLabel>Programme Participants (Cohort)</relationshipLabel>
    <relationshipName>Programme_Participants</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>