force-app/main/default/objects/Programme_Participant__c/fields/Cohort_End_Date__c.field-meta.xml
<CustomField>
    <fullName>Cohort_End_Date__c</fullName>
    <formula>Cohort__r.Cohort_End_Date__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Cohort End Date</label>
    <type>Date</type>
</CustomField>