force-app/main/default/objects/Programme_Participant__c/fields/Cohort_Name__c.field-meta.xml
<CustomField>
    <fullName>Cohort_Name__c</fullName>
    <formula>Cohort__r.Cohort_Name__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Cohort Name</label>
    <type>Text</type>
</CustomField>