force-app/main/default/objects/Programme_Participant__c/fields/Contact__c.field-meta.xml
<CustomField>
    <fullName>Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Used in the Learning Lounge Lightning Community</description>
    <label>Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Programme Participants (Contact)</relationshipLabel>
    <relationshipName>Programme_Participants1</relationshipName>
    <type>Lookup</type>
</CustomField>