force-app/main/default/objects/Programme_Participant__c/fields/Date_of_last_Canvas_log_in__c.field-meta.xml
<CustomField>
    <fullName>Date_of_last_Canvas_log_in__c</fullName>
    <label>Date of last Canvas log-in</label>
    <type>DateTime</type>
</CustomField>