force-app/main/default/objects/Programme_Participant__c/fields/Date_of_Withdrawal_Deferral__c.field-meta.xml
<CustomField>
    <fullName>Date_of_Withdrawal_Deferral__c</fullName>
    <label>Date of Withdrawal/Deferral</label>
    <type>Date</type>
</CustomField>