force-app/main/default/objects/Programme_Participant__c/fields/DTK_Final_Upload_End_Date__c.field-meta.xml
<CustomField>
    <fullName>DTK_Final_Upload_End_Date__c</fullName>
    <formula>Programme__r.Final_Data_Upload_End_Date__c</formula>
    <label>DTK Final Upload End Date</label>
    <type>Date</type>
</CustomField>