force-app/main/default/objects/Programme_Participant__c/fields/DTK_Upload_2_End_Date__c.field-meta.xml
<CustomField>
    <fullName>DTK_Upload_2_End_Date__c</fullName>
    <formula>Programme__r.Data_Upload_2_End_Date__c</formula>
    <label>DTK Upload 2 End Date</label>
    <type>Date</type>
</CustomField>