force-app/main/default/objects/Programme_Participant__c/fields/Eligible_for_Scholarship__c.field-meta.xml
<CustomField>
    <fullName>Eligible_for_Scholarship__c</fullName>
    <inlineHelpText>Our internal assessment of whether we believe this participant is eligible for a scholarship based on the data they have shared with us</inlineHelpText>
    <label>Eligible for Scholarship</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>