force-app/main/default/objects/Programme_Participant__c/fields/End_of_Programme__c.field-meta.xml
<CustomField>
    <fullName>End_of_Programme__c</fullName>
    <defaultValue>false</defaultValue>
    <label>LCF End of Programme</label>
    <type>Checkbox</type>
</CustomField>