force-app/main/default/objects/Programme_Participant__c/fields/Extension_date__c.field-meta.xml
<CustomField>
    <fullName>Extension_date__c</fullName>
    <label>Extension date</label>
    <type>Date</type>
</CustomField>