force-app/main/default/objects/Programme_Participant__c/fields/II_Completion_Date__c.field-meta.xml
<CustomField>
    <fullName>II_Completion_Date__c</fullName>
    <formula>Programme__r.II_Completion_Date__c</formula>
    <label>II Completion Date</label>
    <type>Date</type>
</CustomField>