force-app/main/default/objects/Programme_Participant__c/fields/Is_NPQ_Pass__c.field-meta.xml
<CustomField>
    <fullName>Is_NPQ_Pass__c</fullName>
    <description>this is a hidden field to identify NPQ passes and used in reports</description>
    <formula>IF(ISPICKVAL(NPQ_Status__c,&#39;Pass&#39;),1,0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Is NPQ Pass?</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>