force-app/main/default/objects/Programme_Participant__c/fields/NPQ_Assessment_Submissions__c.field-meta.xml
<CustomField>
    <fullName>NPQ_Assessment_Submissions__c</fullName>
    <inlineHelpText>Counts Assessment Submissions with non failed Final Outcome</inlineHelpText>
    <label>NPQ Assessment Submissions</label>
    <summaryFilterItems>
        <field>Assessment_Submission__c.Submitted__c</field>
        <operation>equals</operation>
        <value>True</value>
    </summaryFilterItems>
    <summaryFilterItems>
        <field>Assessment_Submission__c.Final_Outcome__c</field>
        <operation>notEqual</operation>
        <value>Fail</value>
    </summaryFilterItems>
    <summaryForeignKey>Assessment_Submission__c.Participant__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>