force-app/main/default/objects/Programme_Participant__c/fields/NPQ_Assessment_Submissions_Marked__c.field-meta.xml
<CustomField>
    <fullName>NPQ_Assessment_Submissions_Marked__c</fullName>
    <label>NPQ Assessment Submissions Marked</label>
    <summaryFilterItems>
        <field>Assessment_Submission__c.Marked__c</field>
        <operation>equals</operation>
        <value>True</value>
    </summaryFilterItems>    
    <summaryFilterItems>
        <field>Assessment_Submission__c.Final_Outcome__c</field>
        <operation>notEqual</operation>
        <value>Fail</value>
    </summaryFilterItems>
    <summaryForeignKey>Assessment_Submission__c.Participant__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>