force-app/main/default/objects/Programme_Participant__c/fields/NPQ_Attendance_Requirements_Met__c.field-meta.xml
<CustomField>
    <fullName>NPQ_Attendance_Requirements_Met__c</fullName>
    <defaultValue>false</defaultValue>
    <label>NPQ Attendance Requirements Met</label>
    <type>Checkbox</type>
</CustomField>