force-app/main/default/objects/Programme_Participant__c/fields/NPQ_Status__c.field-meta.xml
<CustomField>
    <fullName>NPQ_Status__c</fullName>
    <label>NPQ Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Active</fullName>
            </value>
            <value>
                <fullName>Pass</fullName>
            </value>
            <value>
                <fullName>1st Fail</fullName>
            </value>
            <value>
                <fullName>2nd Fail</fullName>
            </value>
            <value>
                <fullName>Final Fail</fullName>
            </value>
            <value>
                <fullName>Ready to Submit</fullName>
            </value>
            <value>
                <fullName>Submitted- pending allocation</fullName>
            </value>
            <value>
                <fullName>Submitted (pending outcome)</fullName>
            </value>
            <value>
                <fullName>Extension</fullName>
            </value>
            <value>
                <fullName>Deferral</fullName>
            </value>
            <value>
                <fullName>Withdrawn</fullName>
            </value>
            <value>
                <fullName>Completed</fullName>
                <isActive>false</isActive>
                <label>Completed</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>