force-app/main/default/objects/Programme_Participant__c/fields/NPQ_Submission_value__c.field-meta.xml
<CustomField>
    <fullName>NPQ_Submission_value__c</fullName>
    <formula>IF(ISPICKVAL( NPQ_Status__c, &#39;1st Fail&#39;) || ISPICKVAL( NPQ_Status__c, &#39;Submitted (pending outcome)&#39;), &#39;Submitted&#39;, &#39;Not Submitted&#39;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>NPQ Submission value</label>
    <type>Text</type>
</CustomField>