force-app/main/default/objects/Programme_Participant__c/fields/Opted_in_to_Apply_for_Scholarship__c.field-meta.xml
<CustomField>
    <fullName>Opted_in_to_Apply_for_Scholarship__c</fullName>
    <inlineHelpText>Has the participant agreed they want to apply for a scholarship?</inlineHelpText>
    <label>Opted in to Apply for Scholarship</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>