force-app/main/default/objects/Programme_Participant__c/fields/Other_reason_for_withdrawn_or_deferred__c.field-meta.xml
<CustomField>
    <fullName>Other_reason_for_withdrawn_or_deferred__c</fullName>
    <description>No validation rule as yet whilst we are loading data</description>
    <label>Other reason for withdrawn or deferred</label>
    <length>255</length>
    <type>Text</type>
</CustomField>