force-app/main/default/objects/Programme_Participant__c/fields/Participant_Name__c.field-meta.xml
<CustomField>
    <fullName>Participant_Name__c</fullName>
    <formula>Participant__r.FirstName + &#39; &#39; +  Participant__r.LastName</formula>
    <label>Participant Name</label>
    <type>Text</type>
</CustomField>