force-app/main/default/objects/Programme_Participant__c/fields/Participant_UID__c.field-meta.xml
<CustomField>
    <fullName>Participant_UID__c</fullName>
    <formula>Participant__r.Participant_UID__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Participant UID</label>
    <type>Text</type>
</CustomField>