force-app/main/default/objects/Programme_Participant__c/fields/ParticipantName__c.field-meta.xml
<CustomField>
    <fullName>ParticipantName__c</fullName>
    <description>Created by oe:gen to work around the &#39;Authenticated Website&#39; license limitation.
These licenses cannot access the Contact record and full name. This field is stamped with the full name when a change is made to the `Programme Participant` record.</description>
    <inlineHelpText>Created by oe:gen to work around the &#39;Authenticated Website&#39; license limitation.
These licenses cannot access the Contact record and full name. This field is stamped with the full name when a change is made to the `Programme Participant` record.</inlineHelpText>
    <label>Participant Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>