force-app/main/default/objects/Programme_Participant__c/fields/PMU_Student_Number__c.field-meta.xml
<CustomField>
    <fullName>PMU_Student_Number__c</fullName>
    <description>This field is created for Masters cohorts (P-00594 and P-01116) as requested in case 00056959.</description>
    <label>PMU Student Number</label>
    <length>8</length>
    <type>Text</type>
</CustomField>