force-app/main/default/objects/Programme_Participant__c/fields/Programme__c.field-meta.xml
<CustomField>
    <fullName>Programme__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Programme</label>
    <referenceTo>TL_Programme__c</referenceTo>
    <relationshipLabel>Programme Participants</relationshipLabel>
    <relationshipName>Programme_Participants1</relationshipName>
    <type>Lookup</type>
</CustomField>