force-app/main/default/objects/Programme_Participant__c/fields/Programme_Completion_at_Withdrawal__c.field-meta.xml
<CustomField>
    <fullName>Programme_Completion_at_Withdrawal__c</fullName>
    <inlineHelpText>How much of the programme had been completed at the time the the participant withdrew from the programme. This will be a factor in determining the clawback amount</inlineHelpText>
    <label>Programme Completion at Withdrawal</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>0%</fullName>
            </value>
            <value>
                <fullName>Up to 25%</fullName>
            </value>
            <value>
                <fullName>Up to 50%</fullName>
            </value>
            <value>
                <fullName>Over 50%</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>