force-app/main/default/objects/Programme_Participant__c/fields/Programme_Fee__c.field-meta.xml
<CustomField>
    <fullName>Programme_Fee__c</fullName>
    <label>Programme Fee</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>