force-app/main/default/objects/Programme_Participant__c/fields/Programme_Name__c.field-meta.xml
<CustomField>
    <fullName>Programme_Name__c</fullName>
    <formula>Cohort__r.Programme_Name__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Programme Name</label>
    <type>Text</type>
</CustomField>