force-app/main/default/objects/Programme_Participant__c/fields/Programme_Participant_Count__c.field-meta.xml
<CustomField>
    <fullName>Programme_Participant_Count__c</fullName>
    <description>Used for reporting on programme participants count per contact</description>
    <formula>IF(ISBLANK(Id),0,1)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Programme Participant Count</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>