force-app/main/default/objects/Programme_Participant__c/fields/Programme_Participant_ID_Full__c.field-meta.xml
<CustomField>
    <fullName>Programme_Participant_ID_Full__c</fullName>
    <formula>CASESAFEID(Id)</formula>
    <label>Programme Participant ID Full</label>
    <type>Text</type>
</CustomField>