force-app/main/default/objects/Programme_Participant__c/fields/Proposal_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Proposal_Start_Date__c</fullName>
    <formula>Programme__r.Proposal_Start_Date__c</formula>
    <label>Proposal Start Date</label>
    <type>Date</type>
</CustomField>