force-app/main/default/objects/Programme_Participant__c/fields/Qualification__c.field-meta.xml
<CustomField>
    <fullName>Qualification__c</fullName>
    <label>Qualification</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>NPQEL</fullName>
            </value>
            <value>
                <fullName>NPQH</fullName>
            </value>
            <value>
                <fullName>NPQML</fullName>
            </value>
            <value>
                <fullName>NPQSL</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>