force-app/main/default/objects/Programme_Participant__c/fields/Reason_for_Extension__c.field-meta.xml
<CustomField>
    <fullName>Reason_for_Extension__c</fullName>
    <inlineHelpText>NPQs</inlineHelpText>
    <label>Reason for Extension</label>
    <type>TextArea</type>
</CustomField>