force-app/main/default/objects/Programme_Participant__c/fields/Reason_for_Withdrawn_Deferred__c.field-meta.xml
<CustomField>
    <fullName>Reason_for_Withdrawn_Deferred__c</fullName>
    <label>Reason for Withdrawn/Deferred</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Status__c</controllingField>
        <restricted>true</restricted>
        <valueSetName>Reason_for_Withdrawn_Deferred</valueSetName>
    </valueSet>
</CustomField>