force-app/main/default/objects/Programme_Participant__c/fields/Reasons_for_Withdrawal_Accreditation__c.field-meta.xml
<CustomField>
    <fullName>Reasons_for_Withdrawal_Accreditation__c</fullName>
    <inlineHelpText>For NPQs</inlineHelpText>
    <label>Reasons for Withdrawal (Accreditation)</label>
    <type>TextArea</type>
</CustomField>