force-app/main/default/objects/Programme_Participant__c/fields/Run_Warm_Cold_flow__c.field-meta.xml
<CustomField>
    <fullName>Run_Warm_Cold_flow__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Run Warm/Cold flow</label>
    <type>Checkbox</type>
</CustomField>