force-app/main/default/objects/Programme_Participant__c/fields/School__c.field-meta.xml
<CustomField>
    <fullName>School__c</fullName>
    <formula>Participant__r.Account.Name</formula>
    <label>School</label>
    <type>Text</type>
</CustomField>