force-app/main/default/objects/Programme_Participant__c/fields/School_Mentor_Name_Prog__c.field-meta.xml
<CustomField>
    <fullName>School_Mentor_Name_Prog__c</fullName>
    <formula>Participant__r.School_Mentor_Name__r.FirstName + &quot; &quot;+ Participant__r.School_Mentor_Name__r.LastName</formula>
    <label>School Mentor Name</label>
    <type>Text</type>
</CustomField>