force-app/main/default/objects/Programme_Participant__c/fields/Send_360_Reminder_Email__c.field-meta.xml
<CustomField>
    <fullName>Send_360_Reminder_Email__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Send 360 Reminder Email</label>
    <type>Checkbox</type>
</CustomField>