force-app/main/default/objects/Programme_Participant__c/fields/Start_of_Programme__c.field-meta.xml
<CustomField>
    <fullName>Start_of_Programme__c</fullName>
    <defaultValue>false</defaultValue>
    <label>LCF Start of Programme</label>
    <type>Checkbox</type>
</CustomField>