force-app/main/default/objects/Programme_Participant__c/fields/Status_1_or_0__c.field-meta.xml
<CustomField>
    <fullName>Status_1_or_0__c</fullName>
    <formula>If( OR(ISPICKVAL(Status__c, &quot;Active&quot;) ,ISPICKVAL(Status__c, &quot;Complete&quot;) ),1,0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Status 1 or 0</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>