force-app/main/default/objects/Programme_Participant__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <description>Used in the Learning Lounge Lightning Community</description>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Participant_Status</valueSetName>
    </valueSet>
</CustomField>