force-app/main/default/objects/Programme_Participant__c/fields/TDP_End_of_Programme__c.field-meta.xml
<CustomField>
    <fullName>TDP_End_of_Programme__c</fullName>
    <defaultValue>false</defaultValue>
    <label>TDP End of Programme</label>
    <type>Checkbox</type>
</CustomField>