force-app/main/default/objects/Programme_Participant__c/fields/TDP_Start_of_Programme__c.field-meta.xml
<CustomField>
    <fullName>TDP_Start_of_Programme__c</fullName>
    <defaultValue>false</defaultValue>
    <label>TDP Start of Programme</label>
    <type>Checkbox</type>
</CustomField>