force-app/main/default/objects/Programme_Participant__c/fields/Temp_LMS_End_Date__c.field-meta.xml
<CustomField>
    <fullName>Temp_LMS_End_Date__c</fullName>
    <inlineHelpText>The end date must be within 12 months of the start date.</inlineHelpText>
    <label>Temporary Canvas End Date</label>
    <type>Date</type>
</CustomField>