force-app/main/default/objects/Programme_Participant__c/fields/Temp_LMS_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Temp_LMS_Start_Date__c</fullName>
    <inlineHelpText>Use this to give participants temporary Canvas access for up to 12 months if the whole cohort does not require access e.g. the cohort is finished and the participants still needs to submit an assessment</inlineHelpText>
    <label>Temporary Canvas Start Date</label>
    <type>Date</type>
</CustomField>