force-app/main/default/objects/Programme_Participant__c/fields/TL_Created_by_Name__c.field-meta.xml
<CustomField>
    <fullName>TL_Created_by_Name__c</fullName>
    <label>TL Created by Name</label>
    <length>100</length>
    <type>Text</type>
</CustomField>