force-app/main/default/objects/Programme_Participant__c/fields/Tribal_Reference_Number__c.field-meta.xml
<CustomField>
    <fullName>Tribal_Reference_Number__c</fullName>
    <label>Tribal Reference Number</label>
    <length>20</length>
    <type>Text</type>
</CustomField>