force-app/main/default/objects/Programme_Participant__c/fields/Tribal_Status__c.field-meta.xml
<CustomField>
    <fullName>Tribal_Status__c</fullName>
    <label>Tribal Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Pending Registration</fullName>
                <default>true</default>
                <label>Pending Registration</label>
            </value>
            <value>
                <fullName>Registered</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>