force-app/main/default/objects/Programme_Participant__c/fields/X360_Instance_Id__c.field-meta.xml
<CustomField>
    <fullName>X360_Instance_Id__c</fullName>
    <label>360 Instance Id</label>
    <length>18</length>
    <type>Text</type>
</CustomField>