force-app/main/default/objects/Programme_Participant__c/fields/X360_Self_Assessment_Completed__c.field-meta.xml
<CustomField>
    <fullName>X360_Self_Assessment_Completed__c</fullName>
    <defaultValue>false</defaultValue>
    <label>360 Self Assessment Completed</label>
    <type>Checkbox</type>
</CustomField>