force-app/main/default/objects/Programme_Participant__c/validationRules/Temp_LMS_Start_Date_Programme.validationRule-meta.xml
<ValidationRule>
    <fullName>Temp_LMS_Start_Date_Programme</fullName>
    <active>false</active>
    <errorConditionFormula>AND(
  Temp_LMS_Start_Date__c &lt; Programme__r.LMS_End_Date__c,
  NOT ISBLANK(Temp_LMS_Start_Date__c)
)</errorConditionFormula>
    <errorDisplayField>Temp_LMS_Start_Date__c</errorDisplayField>
    <errorMessage>The temporary Canvas start date can&#39;t be less than the programme Canvas end date</errorMessage>
</ValidationRule>