force-app/main/default/objects/Programme_Participant__c/listViews/Executive_Leadership.listView-meta.xml
<ListView>
    <fullName>Executive_Leadership</fullName>
    <columns>Programme_Name__c</columns>
    <columns>Participant__c</columns>
    <columns>School__c</columns>
    <columns>Cohort_Name__c</columns>
    <columns>NAME</columns>
    <columns>Status__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Programme_Name__c</field>
        <operation>contains</operation>
        <value>Executive Educators:</value>
    </filters>
    <filters>
        <field>Status__c</field>
        <operation>notEqual</operation>
        <value>Complete,Withdrawn,Deferred,Did not complete</value>
    </filters>
    <label>Participants -Executive Leadership - All</label>
</ListView>