force-app/main/default/objects/Programme_Participant__c/listViews/Executive_Leadership_MAT.listView-meta.xml
<ListView>
    <fullName>Executive_Leadership_MAT</fullName>
    <columns>Participant__c</columns>
    <columns>School__c</columns>
    <columns>Programme__c</columns>
    <columns>NAME</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Programme_Name__c</field>
        <operation>contains</operation>
        <value>Executive Educators:</value>
    </filters>
    <filters>
        <field>Status__c</field>
        <operation>equals</operation>
        <value>Active</value>
    </filters>
    <filters>
        <field>Programme_Name__c</field>
        <operation>contains</operation>
        <value>Building and Leading a Sustainable MAT</value>
    </filters>
    <label>Participants Executive Leadership -  MAT</label>
    <language>en_US</language>
</ListView>