force-app/main/default/objects/Programme_Participant__c/listViews/Governance_Leadership_Programme.listView-meta.xml
<ListView>
    <fullName>Governance_Leadership_Programme</fullName>
    <columns>Participant__c</columns>
    <columns>School__c</columns>
    <columns>Cohort_Name__c</columns>
    <columns>NAME</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Programme_Name__c</field>
        <operation>contains</operation>
        <value>Governance Leadership Programme</value>
    </filters>
    <label>Participants - Governance Leadership</label>
    <language>en_US</language>
</ListView>